updated mat-side-nav bar

--- a/src/app/open-requirements/open-requirements.component.html
+++ b/src/app/open-requirements/open-requirements.component.html
@@ -1,8 +1,8 @@
-<div class="mat-typography">
+<div class="mat-typography open-requirement-container">
   <div class="open-requirement-header">
     <h1 class="mat-display-1">Open Requirements</h1>
   </div>
-  <form (ngSubmit)="onOpenRequirementFormSubmit(openRequirementForm)" #openRequirementForm="ngForm">
+  <form (ngSubmit)="onOpenRequirementFormSubmit(openRequirementForm)" #openRequirementForm="ngForm" class="open-requirement-form">
     <div class="form-group">
       <mat-form-field>
         <mat-select class="form-control"
