--- a/src/app/open-requirements/open-requirements.component.html
+++ b/src/app/open-requirements/open-requirements.component.html
@@ -3,6 +3,264 @@
     <h1 class="mat-display-1">Open Requirements</h1>
   </div>
   <form (ngSubmit)="onOpenRequirementFormSubmit(openRequirementForm)" #openRequirementForm="ngForm" class="open-requirement-form">
+    <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutWrap fxLayoutGap="1%" fxLayoutAlign="space-between center">
+      <div fxFlex="24%" fxFlexFill fxFlexAlign="space-around">
+          <mat-card class="controles-container">
+                  <mat-form-field class="form-group">
+                    <mat-select class="form-control"
+                                name="domainName" 
+                                placeholder="Domain Name" 
+                                [(ngModel)]="selectedDomain"
+                                #domainName="ngModel"
+                                (selectionChange)="onDomainChange($event.value)" >
+                      <mat-option *ngFor="let domain of domains" [value]="domain">
+                        {{domain.domainName}}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
+          </mat-card>
+      </div>
+      <div fxFlex="24%" fxFlexFill fxFlexAlign="space-around">
+          <mat-card class="controles-container">
+                  <mat-form-field class="form-group">
+                    <input matInput 
+                           class="form-control"
+                           name="ownerName" 
+                           placeholder="Owner Name" 
+                           type="text" 
+                           [(ngModel)]="owner.ownerName" 
+                           #ownerName="ngModel"
+                           required
+                    />
+                  </mat-form-field>
+          </mat-card>
+      </div>
+      <div fxFlex="24%" fxFlexFill fxFlexAlign="space-around">
+          <mat-card class="controles-container">
+                  <mat-form-field class="form-group">
+                    <input matInput 
+                           class="form-control"
+                           name="winzoneId" 
+                           placeholder="Winzone ID" 
+                           type="text" 
+                           [(ngModel)]="winzone.winzoneId" 
+                           #winzoneId="ngModel"
+                           required
+                    />
+                  </mat-form-field>
+          </mat-card>
+      </div>
+      <div fxFlex="24%" fxFlexFill fxFlexAlign="space-around">
+          <mat-card class="controles-container">
+                  <mat-form-field class="form-group">
+                    <input matInput 
+                           class="form-control"
+                           name="winzoneOpportunity" 
+                           placeholder="Winzone Opportunity" 
+                           type="text" 
+                           [(ngModel)]="winzone.winzoneOpportunity" 
+                           #winzoneOpportunity="ngModel"
+                    />
+                  </mat-form-field>
+          </mat-card>
+      </div>
+    </div>
+    <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutWrap fxLayoutGap="1%" fxLayoutAlign="space-between center">
+        <div fxFlex="24%" fxFlexFill fxFlexAlign="space-around">
+            <mat-card class="controles-container">
+                <mat-form-field class="form-group">
+                    <input class="form-control"
+                           matInput 
+                           [matDatepicker]="picker2" 
+                           placeholder="Opportunity Identified Date" 
+                           name="opportunityIdentifiedDate" 
+                           [(ngModel)]="opprotunityIDate.opportunityIdentifiedDate" 
+                           #opportunityIdentifiedDate="ngModel" >
+                    <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                    <mat-datepicker #picker2></mat-datepicker>
+                  </mat-form-field>
+            </mat-card>
+        </div>
+        <div fxFlex="24%" fxFlexFill fxFlexAlign="space-around">
+            <mat-card class="controles-container">
+                <mat-form-field class="form-group">
+                    <mat-select class="form-control"
+                                name="projectName" 
+                                placeholder="Project Name" 
+                                [(ngModel)]="selectedProject"
+                                #projectName="ngModel"
+                                (selectionChange)="onProjectChange($event.value)"
+                                required >
+                      <mat-option *ngFor="let project of projects" [value]="project">
+                        {{project.projectName}}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
+            </mat-card>
+        </div>
+        <div fxFlex="24%" fxFlexFill fxFlexAlign="space-around">
+            <mat-card class="controles-container">
+                <mat-form-field class="form-group">
+                    <mat-select class="form-control"
+                                name="groupName" 
+                                placeholder="Group Name" 
+                                [(ngModel)]="selectedGroup"
+                                #groupName="ngModel"
+                                (selectionChange)="onGroupChange($event.value)" >
+                      <mat-option *ngFor="let group of groups" [value]="group">
+                        {{group.groupName}}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
+            </mat-card>
+        </div>
+        <div fxFlex="24%" fxFlexFill fxFlexAlign="space-around">
+            <mat-card class="controles-container">
+                <div class="form-group">
+                    <label>Location : </label>
+                    <mat-radio-group class="form-control" 
+                                     name="locationName" 
+                                     placeholder="Location"
+                                     label="Location"
+                                     [(ngModel)]="location.locationName" 
+                                     #locationName="ngModel" 
+                                     required >
+                      <mat-radio-button *ngFor="let location of locations" [value]="location.locationName">
+                        {{location.locationName}}
+                      </mat-radio-button>
+                    </mat-radio-group>
+                  </div>
+            </mat-card>
+        </div>
+    </div>
+    <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutWrap fxLayoutGap="1%" fxLayoutAlign="space-between center">
+        <div fxFlex="24%" fxFlexFill>
+            <mat-card class="controles-container">
+                <mat-form-field class="form-group">
+                    <input class="form-control"
+                           matInput 
+                           [matDatepicker]="picker" 
+                           placeholder="Billing Start Date" 
+                           name="billStartDate" 
+                           [(ngModel)]="billingDate.billStartDate" 
+                           #billStartDate="ngModel" >
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                  </mat-form-field>
+            </mat-card>
+        </div>
+        <div fxFlex="24%" fxFlexFill>
+            <mat-card class="controles-container">
+                <div class="form-group">
+                    <label>Current Status : </label>
+                    <mat-radio-group class="form-control" 
+                                     name="currStatus" 
+                                     [(ngModel)]="currentStatus.currStatus" 
+                                     #currStatus="ngModel" 
+                                     placeholder="Current Status" >
+                      <mat-radio-button value="Open">Open</mat-radio-button>
+                      <mat-radio-button value="Closed">Closed</mat-radio-button>
+                      <mat-radio-button value="Cancelled">Cancelled</mat-radio-button>
+                    </mat-radio-group>
+                  </div>
+            </mat-card>
+        </div>
+        <div fxFlex="24%" fxFlexFill>
+            <mat-card class="controles-container">
+                <mat-form-field class="form-group">
+                    <input matInput 
+                           class="form-control"
+                           name="soLineItemID" 
+                           placeholder="SO# Line Item" 
+                           type="text" 
+                           [(ngModel)]="solineitem.soLineItemID" 
+                           #soLineItemID="ngModel"
+                    />
+                  </mat-form-field>
+            </mat-card>
+        </div>
+        <div fxFlex="24%" fxFlexFill>
+            <mat-card class="controles-container">
+                <mat-form-field class="form-group">
+                    <input matInput 
+                           class="form-control"
+                           name="pipelineCount" 
+                           placeholder="Pipiline" 
+                           type="text" 
+                           [(ngModel)]="pipeline.pipelineCount" 
+                           #pipelineCount="ngModel"
+                    />
+                  </mat-form-field>
+            </mat-card>
+        </div>
+    </div>
+    <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutWrap fxLayoutGap="1%" fxLayoutAlign="space-between center">
+        <div fxFlex="24%" fxFlexFill>
+            <mat-card class="controles-container">
+                <mat-form-field class="form-group">
+                    <textarea  matInput 
+                           class="form-control"
+                           name="requirementComments" 
+                           placeholder="Requirement Comments/Details" 
+                           type="text" 
+                           [(ngModel)]="requirementDetail.requirementComments" 
+                           #requirementComments="ngModel"
+                    ></textarea>
+                  </mat-form-field>
+            </mat-card>
+        </div>
+        <div fxFlex="24%" fxFlexFill>
+            <mat-card class="controles-container">
+                <mat-form-field class="form-group">
+                    <mat-select class="form-control"
+                                name="forecastType" 
+                                placeholder="Forecast Type" 
+                                [(ngModel)]="forecast"
+                                (selectionChange)="onForecastChange($event.value)"
+                                #forecastType="ngModel" >
+                      <mat-option *ngFor="let forecast of forecasts" [value]="forecast">
+                        {{forecast.forecastType}}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
+            </mat-card>
+        </div>
+        <div fxFlex="24%" fxFlexFill>
+            <mat-card class="controles-container">
+                <div class="form-group">
+                    <label>Filled Internally : </label>
+                    <mat-radio-group class="form-control" 
+                                     name="filled" 
+                                     [(ngModel)]="filledInternal.filled" 
+                                     #filled="ngModel" 
+                                     placeholder="Filled Internally" >
+                      <mat-radio-button value="Yes">Yes</mat-radio-button>
+                      <mat-radio-button value="No">No</mat-radio-button>
+                    </mat-radio-group>
+                  </div>
+            </mat-card>
+        </div>
+        <div fxFlex="24%" fxFlexFill>
+            <mat-card class="controles-container">
+                <mat-form-field class="form-group">
+                    <textarea  matInput 
+                           class="form-control"
+                           name="comment" 
+                           placeholder="Closure Comments/Details" 
+                           type="text" 
+                           [(ngModel)]="closureComments.comment" 
+                           #comment="ngModel"
+                    ></textarea>
+                  </mat-form-field>
+            </mat-card>
+        </div>
+    </div>
+  <div>
+    <button mat-flat-button color="primary" type="submit" class="form-submit-button">Submit</button>
+  </div>
+    
+  </form>
+  <!-- <form (ngSubmit)="onOpenRequirementFormSubmit(openRequirementForm)" #openRequirementForm="ngForm" class="open-requirement-form">
     <div class="form-group">
       <mat-form-field>
         <mat-select class="form-control"
@@ -228,8 +486,8 @@
     <div>
       <button mat-stroked-button type="submit">Submit</button>
     </div>
-
-  </form>
+    
+  </form> -->
 </div>
 
 
