--- a/src/app/resource-upload/resource-upload.component.html
+++ b/src/app/resource-upload/resource-upload.component.html
@@ -1,4 +1,349 @@
-<div>
-  <h2>Resource Upload</h2>
-  
+<div class="mat-typography resource-upload-container">
+  <!-- <div class="resource-upload-header">
+    <h2 class="mat-display-2">Resource Upload</h2>
+  </div> -->
+  <div class="resource-upload-header">
+    <h2 mat-dialog-title class="resource-upload-headerline">Resource Upload </h2>
+  </div>
+
+  <!-- <div class="resource-upload-display-container" *ngFor="let resource of resourcedetailsArray">
+    <div class="resource-upload-display-control">
+      <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutWrap fxLayoutGap="2%" fxLayoutAlign="space-between center" class="fx-layout-form-control">
+        <div fxFlex="30%" fxFlexFill>
+          <mat-card class="controles-container">
+            <label disabled>Project ID: </label>
+            <mat-form-field>
+              <mat-select [value]=resource.projectId disabled>
+                <mat-option *ngFor="let id of projectdetails" [value]="id.id" disabled>
+                  {{id.id}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </mat-card>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <mat-card class="controles-container">
+            <label disabled>Project Name: </label>
+            <mat-form-field>
+              <mat-select [value]=resource.projectName disabled>
+                <mat-option *ngFor="let name of projectdetails" [value]="name.name" disabled>
+                  {{name.name}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </mat-card>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <mat-card class="controles-container">
+            <mat-form-field>
+              <input matInput placeholder="Resource Name" [value]=resource.name disabled>
+            </mat-form-field>
+          </mat-card>
+        </div>
+      </div>
+
+      <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutWrap fxLayoutGap="2%" fxLayoutAlign="space-between center" class="fx-layout-form-control">
+        <div fxFlex="30%" fxFlexFill>
+          <mat-card class="controles-container">
+            <mat-form-field>
+              <input matInput placeholder="Resource WM ID" [value]=resource.wmId disabled>
+            </mat-form-field>
+          </mat-card>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <mat-card class="controles-container">
+            <mat-form-field>
+              <input matInput placeholder="Resource Cognizant ID" [value]=resource.cogId disabled>
+            </mat-form-field>
+          </mat-card>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <mat-card class="controles-container">
+            <mat-form-field>
+              <input matInput placeholder="FG Worker ID" [value]=resource.fgWorkId disabled>
+            </mat-form-field>
+          </mat-card>
+        </div>
+      </div>
+
+      <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutWrap fxLayoutGap="2%" fxLayoutAlign="space-between center" class="fx-layout-form-control">
+        <div fxFlex="30%" fxFlexFill>
+          <mat-card class="controles-container">
+            <mat-form-field>
+              <input matInput placeholder="FG Contract" [value]=resource.fgContract disabled>
+            </mat-form-field>
+          </mat-card>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <mat-card class="controles-container">
+            <div class="radio-btn-grp">
+              <label>Project Role : </label>
+              <mat-radio-group [value]="resource.billability">
+                <mat-radio-button class="radio-btn-value" value="B" disabled>Billable</mat-radio-button>
+                <mat-radio-button class="radio-btn-value" value="NB" disabled>Non-Billable</mat-radio-button>
+              </mat-radio-group>
+            </div>
+          </mat-card>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <mat-card class="controles-container">
+            <div class="radio-btn-grp">
+              <label>Location : </label>
+              <mat-radio-group [value]="resource.location">
+                <mat-radio-button class="radio-btn-value" value="On" disabled>Onsite</mat-radio-button>
+                <mat-radio-button class="radio-btn-value" value="Off" disabled>Off-shore</mat-radio-button>
+              </mat-radio-group>
+            </div>
+          </mat-card>
+        </div>
+      </div>
+
+      <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutWrap fxLayoutGap="2%" fxLayoutAlign="space-between center" class="fx-layout-form-control">
+        <div fxFlex="30%" fxFlexFill>
+          <mat-card class="controles-container">
+            <mat-form-field>
+              <input matInput placeholder="Start Date" [value]=resource.pickerStart disabled>
+            </mat-form-field>
+          </mat-card>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <mat-card class="controles-container">
+            <mat-form-field>
+              <input matInput placeholder="End Date" [value]=resource.pickerEnd disabled>
+            </mat-form-field>
+          </mat-card>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <mat-card class="controles-container">
+            <mat-form-field>
+              <input matInput placeholder="Allocation (in %)" [value]=resource.allocation disabled>
+            </mat-form-field>
+          </mat-card>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
+  <hr>
+
+  <div class="resource-upload-form-container">
+    <form (ngSubmit)="submitResources()" [formGroup]="resourceForm" class="resource-upload-form-control">
+
+        <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutWrap fxLayoutGap="2%" fxLayoutAlign="space-between center"
+        class="fx-layout-form-control">
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>Domain Name</mat-label>
+              <mat-select class="form-control" formControlName="domainName" placeholder="Domain Name" required>
+                <mat-option *ngFor="let domain of domaindetails" [value]="domain.domainName">
+                  {{domain.domainName}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>Group Name</mat-label>
+              <mat-select class="form-control" formControlName="groupName" placeholder="Group Name" required>
+                <mat-option *ngFor="let group of domaindetails" [value]="group.groupName">
+                  {{group.groupName}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>Owner Name</mat-label>
+              <input matInput class="form-control" formControlName="ownerName" placeholder="Owner Name" type="text"
+                required />
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+
+      <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutWrap fxLayoutGap="2%" fxLayoutAlign="space-between center"
+        class="fx-layout-form-control">
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>Project ID</mat-label>
+              <mat-select class="form-control" formControlName="projectId" placeholder="Project ID" required>
+                <mat-option *ngFor="let id of projectdetails" [value]="id.id">
+                  {{id.id}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>Project Name</mat-label>
+              <mat-select class="form-control" formControlName="projectName" placeholder="Project Name" required>
+                <mat-option *ngFor="let name of projectdetails" [value]="name.name">
+                  {{name.name}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>Resource Name</mat-label>
+              <input matInput class="form-control" formControlName="name" placeholder="Resource Name" type="text"
+                required />
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+
+      <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutWrap fxLayoutGap="2%" fxLayoutAlign="space-between center"
+        class="fx-layout-form-control">
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>Resource WM ID</mat-label>
+              <input matInput class="form-control" formControlName="wmId" placeholder="Resource WM ID" type="text"
+                required />
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>Resource CTS ID</mat-label>
+              <input matInput class="form-control" formControlName="cogId" placeholder="Resource CTS ID" type="text"
+                required />
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>FG Worker ID</mat-label>
+              <input matInput class="form-control" formControlName="fgWorkId" placeholder="FG Worker ID" type="text"
+                required />
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+
+      <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutWrap fxLayoutGap="2%" fxLayoutAlign="space-between center"
+        class="fx-layout-form-control">
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>FG Contract ID</mat-label>
+              <input matInput class="form-control" formControlName="fgContract" placeholder="FG Contract ID" type="text"
+                required />
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>Project Role : </mat-label>
+              <mat-select class="form-control" formControlName="billability" placeholder="Project Role" required>
+                <mat-option value="Billable">Billable</mat-option>
+                <mat-option value="Non-Billable">Non-Billable</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>Location : </mat-label>
+              <mat-select class="form-control" formControlName="location" placeholder="Location" required>
+                <mat-option value="Onsite">Onsite</mat-option>
+                <mat-option value="Offshore">Offshore</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+
+      <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutWrap fxLayoutGap="2%" fxLayoutAlign="space-between center"
+        class="fx-layout-form-control">
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>Project Start Date</mat-label>
+              <input class="form-control" matInput [matDatepicker]="pickerStart" placeholder="Project Start Date"
+                formControlName="pickerStart" />
+              <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
+              <mat-datepicker #pickerStart></mat-datepicker>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>Project End Date</mat-label>
+              <input class="form-control" matInput [matDatepicker]="pickerEnd" placeholder="Project End Date"
+                formControlName="pickerEnd" />
+              <mat-datepicker-toggle matSuffix [for]="pickerEnd"></mat-datepicker-toggle>
+              <mat-datepicker #pickerEnd></mat-datepicker>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div fxFlex="30%" fxFlexFill>
+          <div class="controles-container">
+            <mat-form-field class="form-group" appearance="outline">
+              <mat-label>Allocation (in %)</mat-label>
+              <input matInput class="form-control" formControlName="allocation" placeholder="Allocation (in %)" type="number"
+                required />
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-buttons" fxLayout="row" fxLayout.lt-sm="column" fxLayoutWrap fxLayoutGap="2%" fxLayoutAlign="space-between center">
+        <!-- <div fxFlex="auto" fxFlexFill fxFlexAlign="end" class="button1">
+          <button mat-flat-button color="warn" class="add-another-resource-button" (click)="addAnotherResource(resourceForm.value)"
+            [disabled]="!resourceForm.valid">
+            <span><b>Add Another Resource</b></span>
+          </button>
+        </div> -->
+
+        <div fxFlex="auto" fxFlexFill fxFlexAlign="start" class="button2">
+          <button mat-flat-button color="primary" class="submit-resource-button" [disabled]="!resourceForm.valid" type="submit">
+            <span><b>Submit</b></span>
+          </button>
+        </div>
+
+      </div>
+    </form>
+  </div>
 </div>
+
+<!-- [mat-dialog-close]="resourcedetails" -->
