--- a/src/app/open-requirements/open-requirements-view/open-requirements-view.component.html
+++ b/src/app/open-requirements/open-requirements-view/open-requirements-view.component.html
@@ -1,5 +1,5 @@
-<div class="open-requirement-table-view-container">
-  <table mat-table #openReqTable [dataSource]="dataSource" class="mat-elevation-z8 open-requirement-table" *ngIf="dataSource.length > 0">
+<div class="open-requirement-table-view-container mat-elevation-z8">
+  <table mat-table #openReqTable [dataSource]="dataSource" class="open-requirement-table" *ngIf="dataSource.length > 0">
     <ng-container matColumnDef="soLineItemID">
       <th mat-header-cell *matHeaderCellDef> SO#Line Item Id </th>
       <td mat-cell *matCellDef="let element"> {{element.soLineItemID}} </td>
@@ -67,6 +67,22 @@
     <ng-container matColumnDef="closureComment">
       <th mat-header-cell *matHeaderCellDef> Closure Comment </th>
       <td mat-cell *matCellDef="let element"> {{element.closureComment}} </td>
+    </ng-container>
+    <ng-container matColumnDef="updateRow" stickyEnd >
+      <th mat-header-cell *matHeaderCellDef>Update</th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-button >
+            <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="deleteRow" stickyEnd >
+      <th mat-header-cell *matHeaderCellDef> Delete </th>
+      <td mat-cell *matCellDef="let element">
+          <button mat-button >
+              <mat-icon>delete</mat-icon>
+          </button>
+      </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
