--- a/src/app/open-requirements/open-requirements-view/open-requirements-view.component.scss
+++ b/src/app/open-requirements/open-requirements-view/open-requirements-view.component.scss
@@ -3,8 +3,31 @@
     padding: 5px;
     overflow: auto;
     width: 98.5%;
+    height: 400px;
 }
 
 table {
     width: 2000px;
+  }
+
+td.mat-column-updateRow {
+    width: 20px;
+    padding-right: 8px;
+  }
+
+  td.mat-column-deleteRow {
+    width: 20px;
+    padding-right: 8px;
+  }
+
+  .mat-table-sticky {
+    border-left: 1px solid #e0e0e0;
+  }
+
+  th.mat-column-updateRow {
+    text-align: center;
+  }
+
+  th.mat-column-deleteRow {
+    text-align: center;
   }
