--- a/src/app/open-requirements/open-requirements-view/open-requirements-view.component.html
+++ b/src/app/open-requirements/open-requirements-view/open-requirements-view.component.html
@@ -1,5 +1,10 @@
-<div class="open-requirement-table-view-container mat-elevation-z8">
-  <table mat-table #openReqTable [dataSource]="dataSource" class="open-requirement-table" *ngIf="dataSource.length > 0">
+<div class="open-requirement-table-view-container mat-elevation-z8 ">
+  <div>
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+  </div>
+  <table mat-table [dataSource]="dataSources" class="open-requirement-table" *ngIf="dataSource.length > 0">
     <ng-container matColumnDef="soLineItemID">
       <th mat-header-cell *matHeaderCellDef> SO#Line Item Id </th>
       <td mat-cell *matCellDef="let element"> {{element.soLineItemID}} </td>
@@ -45,9 +50,9 @@
       <td mat-cell *matCellDef="let element"> {{element.billStartDate}} </td>
     </ng-container>
     <ng-container matColumnDef="currStatus">
-        <th mat-header-cell *matHeaderCellDef> Current Status </th>
-        <td mat-cell *matCellDef="let element"> {{element.currStatus}} </td>
-      </ng-container>
+      <th mat-header-cell *matHeaderCellDef> Current Status </th>
+      <td mat-cell *matCellDef="let element"> {{element.currStatus}} </td>
+    </ng-container>
     <ng-container matColumnDef="pipelineCount">
       <th mat-header-cell *matHeaderCellDef> Pipeline </th>
       <td mat-cell *matCellDef="let element"> {{element.pipelineCount}} </td>
@@ -68,23 +73,23 @@
       <th mat-header-cell *matHeaderCellDef> Closure Comment </th>
       <td mat-cell *matCellDef="let element"> {{element.closureComment}} </td>
     </ng-container>
-    <ng-container matColumnDef="updateRow" stickyEnd >
-      <th mat-header-cell *matHeaderCellDef>Update</th>
+    <ng-container matColumnDef="updateRow" stickyEnd>
+      <th mat-header-cell *matHeaderCellDef> Update </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-button >
-            <mat-icon>edit</mat-icon>
+        <button mat-button (click)="editRequirementData(element.soLineItemID)">
+          <mat-icon>edit</mat-icon>
         </button>
       </td>
     </ng-container>
-    <ng-container matColumnDef="deleteRow" stickyEnd >
+    <ng-container matColumnDef="deleteRow" stickyEnd>
       <th mat-header-cell *matHeaderCellDef> Delete </th>
       <td mat-cell *matCellDef="let element">
-          <button mat-button >
-              <mat-icon>delete</mat-icon>
-          </button>
+        <button mat-button (click)="deleteRequirementData(element.soLineItemID)">
+          <mat-icon>delete</mat-icon>
+        </button>
       </td>
     </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns;"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   <div *ngIf="dataSource.length === 0">No data currently present..!! Thank U</div>
