--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,15 @@
-<p>
-  page-not-found works!
-</p>
+<div class="page-not-foung-container">
+  <mat-card class="page-not-found-card">
+    <img mat-card-image 
+      src="https://learn.getgrav.org/user/pages/11.troubleshooting/01.page-not-found/error-404.png" 
+      alt="Page Not Found" class="page-not-found-img">
+    <mat-card-content class="page-not-found-content">
+      <p>
+        Want to go to HomePage...???
+      </p>
+    </mat-card-content>
+    <mat-card-actions class="page-not-found-button">
+      <button mat-button color="primary" routerLink="/requirements">HomePage</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
